# GERADOR_PRATICO

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: architecture.md  decision_log.md  handoff.md  idea.md  implementation_plan.md  non_goals.md  project_status.md  review_report.md  scope.md  tasks.md
exemplos_xml/: CTE SAÍDA.xml  entrada.xml  evento.xml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: classifier.rs  commands.rs  config.rs  deduplicator.rs  errors.rs  importer.rs  lib.rs  main.rs  parser.rs  progress.rs  report.rs
src/components/: CnpjInput.tsx  DescriptionOptions.tsx  ExportSelector.tsx  GtinsOptions.tsx  ImportSelector.tsx  ProgressPanel.tsx  ResultDialog.tsx
src/utils/: cnpj.test.ts  cnpj.ts
