[package]
name = "gerador-relatorio-notas"
version = "1.0.0"
description = "Aplicativo local para gerar relatorios de documentos fiscais."
authors = ["Pratica"]
edition = "2021"

[lib]
name = "gerador_relatorio_notas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
roxmltree = "0.20"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
rust_xlsxwriter = "0.94.0"
chrono = "0.4.44"
